kubernetes/apps/default/coder/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
spec:
  hostnames:
    - coder.${SECRET_DOMAIN}
    - coder.${SECRET_INTERNAL_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: coder
          port: 80
